[gd_scene load_steps=6 format=3 uid="uid://b2kq3v4n5m6p7"]

[ext_resource type="Script" uid="uid://clbx3hjrvmpq6" path="res://scenes/windows/shop_window.gd" id="1_shop_window"]
[ext_resource type="FontFile" uid="uid://fitttpkbkn2q" path="res://assets/fonts/honeyblot_caps.ttf" id="2_472kc"]
[ext_resource type="Texture2D" uid="uid://bfsl8r5pdvf3j" path="res://assets/sprites/items/food/rpg_item_icon_coin_102.png" id="3_85n3y"]

[sub_resource type="LabelSettings" id="LabelSettings_vo00h"]
font = ExtResource("2_472kc")
font_size = 32
font_color = Color(0.050980393, 0.16862746, 0.27058825, 1)
outline_size = 8
outline_color = Color(0.5529412, 0.4117647, 0.47843137, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_85n3y"]
font = ExtResource("2_472kc")
font_size = 32
font_color = Color(1, 0.9254902, 0.8392157, 1)
outline_size = 6
outline_color = Color(0.050980393, 0.16862746, 0.27058825, 1)
shadow_size = 0

[node name="ShopWindow" type="CanvasLayer"]
script = ExtResource("1_shop_window")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1200, 800)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"DefaultPanelContainer"

[node name="Banner" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_right = 16.0
offset_bottom = 32.0
grow_horizontal = 2
theme_type_variation = &"Banner"

[node name="ShopNameLabel" type="Label" parent="Panel/Banner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -8.0
offset_right = 264.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Shop Name"
label_settings = SubResource("LabelSettings_vo00h")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="GreetingLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Welcome!"

[node name="ItemList" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ItemList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_bottom = 52.0
grow_horizontal = 0
theme_type_variation = &"XButton"
theme_override_fonts/font = ExtResource("2_472kc")
theme_override_font_sizes/font_size = 16

[node name="Label" type="Label" parent="Panel/CloseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "X"
label_settings = SubResource("LabelSettings_85n3y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.9625
anchor_right = 0.025
anchor_bottom = 0.9625
offset_top = -57.0
offset_right = 95.0
grow_vertical = 0
size_flags_horizontal = 0
theme_type_variation = &"DefaultPanelContainer"
metadata/_edit_use_anchors_ = true

[node name="Footer" type="HBoxContainer" parent="Panel/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/PanelContainer/Footer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("3_85n3y")
expand_mode = 1

[node name="GoldLabel" type="Label" parent="Panel/PanelContainer/Footer"]
layout_mode = 2
text = "1000"
vertical_alignment = 2
